--- a/WeHelpApp.html
+++ b/WeHelpApp.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					目前規劃在6月底提離職(領完績效獎金)，6月期間利用下班＆週末繼續學習線上課程：JavaScript 網頁前端工程教學，7月～7月中利用下班＆週末學習課程計畫之進度，7月中開始可全職學習，預計週一～週五 9:00~18:00為學習時間，中間休息1.5小時，視情況調整學習時間。
+					目前規劃在6月底提離職(領完績效獎金)，6月期間利用下班＆週末繼續學習線上課程：JavaScript 網頁前端工程教學，7月～7月中利用下班＆週末學習課程計畫之進度(週一可請假參與線上會議)，7月中開始可全職學習，預計週一～週五 9:00~18:00為學習時間，中間休息1.5小時，視情況調整學習時間。
 				</div>
 			</div>
 
@@ -69,7 +69,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					學習基本 HTML、CSS 網頁開發時，是參考彭彭免費線上教學影片，覺得講解的很清楚，收穫良多，謝謝彭彭團隊用心製作影片，讓我們有很多學習資源，希望可以加入 WeHelp 訓練營，與大家一起努力成長，順利轉職。
+					學習基本 HTML、CSS 網頁開發時，是參考彭彭免費線上教學影片，覺得講解的很清楚，收穫良多，謝謝彭彭團隊用心製作影片，讓我們有很多學習資源，很希望可以加入 WeHelp 訓練營，與大家一起努力成長，順利轉職。
 				</div>
 			</div>
 		</br>
