--- a/WeHelpApp.html
+++ b/WeHelpApp.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					目前規劃在6月底提離職(領完績效獎金)，6月期間利用下班＆週末繼續學習線上課程：JavaScript 網頁前端工程教學，7月～7月中利用下班＆週末學習課程計畫之進度(週一請假參與線上會議)，7月中開始可全職學習，預計週一～週五 9:00~18:00為學習時間，中間休息1.5小時，視情況調整學習時間。
+					目前規劃在6月底提離職(領完績效獎金)，6月期間利用下班＆週末繼續學習線上課程：JavaScript 網頁前端工程教學，7月～7月中利用下班＆週末學習課程計畫之進度，7月中開始可全職學習，預計週一～週五 9:00~18:00為學習時間，中間休息1.5小時，視情況調整學習時間。
 				</div>
 			</div>
 
