--- a/WeHelpApp.html
+++ b/WeHelpApp.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					我叫李若瑜，是個喜歡接觸新鮮事、喜歡完成任務的而有成就感的人，工作中完成專案或是解開bug、生活中登山旅遊看不一樣的風景、參加解謎活動解開謎題等，這些都讓我感到開心。
+					我叫李若瑜，是個喜歡接觸新鮮事、喜歡完成任務而有成就感的人，工作中完成專案或是解開bug、生活中登山旅遊看不一樣的風景、參加解謎活動解開謎題等，這些都讓我感到開心。
 					</br>我大學及研究所就讀機械相關科系，畢業後從事馬達設計，三年前決定轉職軟體工程師，藉由下班後自學C++，轉職到自動化公司從事嵌入式軟體開發至今；前陣子和家人決定未來到加拿大生活，基於該國軟體業需求大宗為網頁開發，決定轉職為網頁開發工程師。
 				</div>
 			</div>
@@ -33,7 +33,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					目前規劃在6月底提離職(領完績效獎金)，6月期間利用下班＆週末繼續學習線上課程：JavaScript 網頁前端工程教學，7月～7月中利用下班＆週末學習課程計畫之進度，7月中開始可全職學習，預計週一～週五 9:00~18:00為學習時間，中間休息1.5小時，視情況調整學習時間。
+					規劃在6月底提離職，6月期間利用下班＆週末繼續學習線上課程：JavaScript 網頁前端工程教學，7月～7月中利用下班＆週末學習課程計畫之進度，7月中開始可全職學習，預計週一～週五 9:00~18:00為學習時間，中間休息1.5小時，視情況調整學習時間。
 				</div>
 			</div>
 
@@ -51,7 +51,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					有次因組織異動換了新主管，新主管總是用罵的方式教學，剛開始我的做法是“先忍”、認為上手就不會挨罵。但學新東西又被挨罵，長期感覺很自卑；後來尋求公司提供的職場諮商服務，諮商師建議我冷靜地以“跟主管站在同一條船”的方式反應：「我也希望把工作做好，但是被挨罵這樣負面情緒反而影響我工作的效率”，希望您可以平靜地說明。」在此之後主管的態度也不那麼衝。
+					有次因組織異動換了新主管，新主管總是用罵的方式教學，剛開始我的做法是“先忍”、認為上手就不會挨罵。但學新東西又被挨罵，感覺很自卑；後來尋求公司職場諮商服務，聽從諮商師的建議先做喜歡的事情冷靜下來，之後平靜地以“跟主管站在同一條船”的方式反應：「我也希望把工作做好，但是被挨罵這樣負面情緒反而影響我工作的效率”，希望您可以平靜地說明。」在此之後主管的態度也緩和許多。
 				</div>
 			</div>
 
