--- a/WeHelpApp.html
+++ b/WeHelpApp.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					有次因組織異動換了新主管，新主管總是用罵的方式教學，剛開始我的做法是“先忍”，認為上手就不會挨罵，藉由抱怨抒發情緒。但學新東西又被挨罵，感覺很自卑；後來尋求公司職場諮商服務，聽從諮商師的建議，先做喜歡的事情讓情緒冷靜下來，之後平靜地以“跟主管站在同一條船”的方式反應：「我也希望把工作做好，但是被挨罵這樣負面情緒反而影響我工作的效率”，希望您可以平靜地說明。」在此之後主管的態度也緩和許多。
+					有次因組織異動換了新主管，新主管總是用罵的方式教學，剛開始我的做法是“先忍”，認為上手就不會挨罵，藉由抱怨抒發情緒。但學新東西又被挨罵，感覺很自卑；後來尋求公司職場諮商服務，聽從諮商師的建議，先做喜歡的事情讓情緒冷靜下來，之後平靜地以“跟主管站在同一條船”的方式反應：「我也希望把工作做好，但是被挨罵這樣負面情緒反而影響我工作的效率，希望您可以平靜地說明。」在此之後主管的態度也緩和許多。
 				</div>
 			</div>
 
