--- a/WeHelpApp.html
+++ b/WeHelpApp.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="content">
 				<div class="contentText">
-					三年前為了轉職軟體工程師，利用線上課程學習C++，並參考網友分享經驗，循序漸進的學習資料結構，並在LeetCode刷題驗證自己的學習成果。目前的目標是轉職網頁開發，現階段在釐清整個網頁開發的框架，藉由線上影片/blog/ChaptGPT等資源，了解網頁開發的運行，各角色職責、以及可能會使用到的程式語言、工具等。
+					三年前為了轉職軟體工程師，利用線上課程學習C++，並參考網友分享經驗，循序漸進的學習資料結構，並在LeetCode刷題驗證自己的學習成果。目前的目標是轉職網頁開發，現階段在釐清整個網頁開發的框架，藉由線上影片/blog/ChatGPT等資源，了解網頁開發的運行，各角色職責、以及可能會使用到的程式語言、工具等。
 				</div>
 			</div>
 
